# final-CS100-2022

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GameSystem.h  Inventory.h  Makefile  README.md  README.md.bak  TextFile1.txt  class_test.cpp  cmake_install.cmake  creature.cpp  creature.h  creaturetest.h  dialogue.cpp  dialogue.h  dialogue.hpp  dialoguetest.h  display.cpp  display.h  example.cpp  game  inventorytest.h  main.cpp  test  test.cpp  test.h
Actions/: Action.cpp  Action.h  actiontest.h
Testing/: Testing.vcxproj
dialogue/: finalroom.txt  intro.txt  outro.txt  room1.txt  room2.txt  room3.txt  room4.txt  test.txt
